{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 219,
  "lineage": "0e17681c-87b6-6cc1-7fe1-7fb832c99ba4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "North_Virginia-VMs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0345f44fe05216fc4",
            "arn": "arn:aws:ec2:us-east-1:168699439230:instance/i-03558383bd323d75c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03558383bd323d75c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Dev-North_Virginia-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c81cfa06950f0c1e",
            "private_dns": "ip-10-23-1-69.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.23.1.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c428a5bea086a46",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfd5a99f01b2eaca",
            "tags": {
              "Name": "Dev-VM-50"
            },
            "tags_all": {
              "Name": "Dev-VM-50"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d54f0c2ded6724b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.North_VirginiaKey",
            "aws_security_group.Allow-RDP-HTTP-from-Oregon",
            "aws_subnet.North_Virginia-Subnet-1",
            "aws_vpc.North_Virginia-VPC",
            "tls_private_key.KeyPairGeneration"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0345f44fe05216fc4",
            "arn": "arn:aws:ec2:us-east-1:168699439230:instance/i-071f780560dd38b8a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071f780560dd38b8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Dev-North_Virginia-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057cd636cd721a4d2",
            "private_dns": "ip-10-23-1-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.23.1.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03357e947581a7bf0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfd5a99f01b2eaca",
            "tags": {
              "Name": "Dev-VM-51"
            },
            "tags_all": {
              "Name": "Dev-VM-51"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d54f0c2ded6724b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.North_VirginiaKey",
            "aws_security_group.Allow-RDP-HTTP-from-Oregon",
            "aws_subnet.North_Virginia-Subnet-1",
            "aws_vpc.North_Virginia-VPC",
            "tls_private_key.KeyPairGeneration"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Oregon-VM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03690dfa5bcede9c7",
            "arn": "arn:aws:ec2:us-west-2:168699439230:instance/i-0117b2919d7e9ad59",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0117b2919d7e9ad59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "Dev-Oregon-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf4b01ec39f03993",
            "private_dns": "ip-10-13-1-61.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.13.1.61",
            "public_ip": "34.216.5.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e501d20230b85fac",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034756a8f399709cc",
            "tags": {
              "Name": "Dev-VM1"
            },
            "tags_all": {
              "Name": "Dev-VM1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b554d186f3dd28c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.OregonKey",
            "aws_security_group.Allow-RDP-HTTP",
            "aws_subnet.Oregon-Subnet-1",
            "aws_vpc.Oregon-VPC",
            "tls_private_key.KeyPairGeneration"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Oregon-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:internet-gateway/igw-095ad8d3507094897",
            "id": "igw-095ad8d3507094897",
            "owner_id": "168699439230",
            "tags": {
              "Name": "Dev-IGW"
            },
            "tags_all": {
              "Name": "Dev-IGW"
            },
            "vpc_id": "vpc-09ded4c8f36263f82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Oregon-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-095ad8d3507094897",
            "id": "r-rtb-05a3af780046d291f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a3af780046d291f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.Oregon-IGW",
            "aws_route_table.Oregon-RT",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Route-From-North_Virginia-to-Oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.13.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-087d3e74ba3c53a522424044330",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-087d3e74ba3c53a52",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07bc38f78d7d5cbd1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.North_Virginia-RT",
            "aws_vpc.North_Virginia-VPC",
            "aws_vpc.Oregon-VPC",
            "aws_vpc_peering_connection.Peering-Request"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Route-From-Oregon-to-North_Virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.23.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a3af780046d291f2851522543",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a3af780046d291f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-07bc38f78d7d5cbd1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Oregon-RT",
            "aws_vpc.North_Virginia-VPC",
            "aws_vpc.Oregon-VPC",
            "aws_vpc_peering_connection.Peering-Request"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "North_Virginia-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:route-table/rtb-087d3e74ba3c53a52",
            "id": "rtb-087d3e74ba3c53a52",
            "owner_id": "168699439230",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.13.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-07bc38f78d7d5cbd1"
              }
            ],
            "tags": {
              "Name": "Dev-RT"
            },
            "tags_all": {
              "Name": "Dev-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0382a0bef72e306"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Oregon-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:route-table/rtb-05a3af780046d291f",
            "id": "rtb-05a3af780046d291f",
            "owner_id": "168699439230",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095ad8d3507094897",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.23.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-07bc38f78d7d5cbd1"
              }
            ],
            "tags": {
              "Name": "Dev-RT"
            },
            "tags_all": {
              "Name": "Dev-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ded4c8f36263f82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "North_Virginia-RTA-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0324b1af79fd4aa0b",
            "route_table_id": "rtb-087d3e74ba3c53a52",
            "subnet_id": "subnet-0cfd5a99f01b2eaca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.North_Virginia-RT",
            "aws_subnet.North_Virginia-Subnet-1",
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "North_Virginia-RTA-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0963ad48d36a9896b",
            "route_table_id": "rtb-087d3e74ba3c53a52",
            "subnet_id": "subnet-0c536e1e3fb16f5d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.North_Virginia-RT",
            "aws_subnet.North_Virginia-Subnet-2",
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Oregon-RTA-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009264021a42c8c30",
            "route_table_id": "rtb-05a3af780046d291f",
            "subnet_id": "subnet-034756a8f399709cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Oregon-RT",
            "aws_subnet.Oregon-Subnet-1",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Oregon-RTA-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1bfa9e460c80af3",
            "route_table_id": "rtb-05a3af780046d291f",
            "subnet_id": "subnet-0c6213ffea05af66b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Oregon-RT",
            "aws_subnet.Oregon-Subnet-2",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-RDP-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:security-group/sg-04b554d186f3dd28c",
            "description": "Allow-RDP-HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b554d186f3dd28c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow-RDP-HTTP",
            "name_prefix": "",
            "owner_id": "168699439230",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow-RDP+HTTP"
            },
            "tags_all": {
              "Name": "Allow-RDP+HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ded4c8f36263f82"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-RDP-HTTP-from-Oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:security-group/sg-08d54f0c2ded6724b",
            "description": "Allow-RDP-HTTP-from-Oregon",
            "egress": [
              {
                "cidr_blocks": [
                  "10.13.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d54f0c2ded6724b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.13.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.13.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow-RDP-HTTP-from-Oregon",
            "name_prefix": "",
            "owner_id": "168699439230",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow-RDP-HTTP-from-Oregon"
            },
            "tags_all": {
              "Name": "Allow-RDP-HTTP-from-Oregon"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0382a0bef72e306"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "North_Virginia-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:subnet/subnet-0cfd5a99f01b2eaca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.23.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfd5a99f01b2eaca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "168699439230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Subnet2.1"
            },
            "tags_all": {
              "Name": "Dev-Subnet2.1"
            },
            "vpc_id": "vpc-0a0382a0bef72e306"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "North_Virginia-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:subnet/subnet-0c536e1e3fb16f5d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.23.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c536e1e3fb16f5d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "168699439230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Subnet2.2"
            },
            "tags_all": {
              "Name": "Dev-Subnet2.2"
            },
            "vpc_id": "vpc-0a0382a0bef72e306"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Oregon-Subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:subnet/subnet-034756a8f399709cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.13.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034756a8f399709cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "168699439230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Subnet1.1"
            },
            "tags_all": {
              "Name": "Dev-Subnet1.1"
            },
            "vpc_id": "vpc-09ded4c8f36263f82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Oregon-Subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:subnet/subnet-0c6213ffea05af66b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.13.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6213ffea05af66b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "168699439230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Subnet1.2"
            },
            "tags_all": {
              "Name": "Dev-Subnet1.2"
            },
            "vpc_id": "vpc-09ded4c8f36263f82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "North_Virginia-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:vpc/vpc-0a0382a0bef72e306",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.23.0.0/16",
            "default_network_acl_id": "acl-0ca47f08d35e6e808",
            "default_route_table_id": "rtb-09cf9e428b9e586d4",
            "default_security_group_id": "sg-01bf0745d46c5f914",
            "dhcp_options_id": "dopt-0109015c31d39fa0d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0382a0bef72e306",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09cf9e428b9e586d4",
            "owner_id": "168699439230",
            "tags": {
              "Name": "Dev-VPC2"
            },
            "tags_all": {
              "Name": "Dev-VPC2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Oregon-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:vpc/vpc-09ded4c8f36263f82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.13.0.0/16",
            "default_network_acl_id": "acl-0dda62dbf195cabea",
            "default_route_table_id": "rtb-0ca2bd8cb2dc21187",
            "default_security_group_id": "sg-0843eb8d02f26a368",
            "dhcp_options_id": "dopt-0dbbb5a5d7b322495",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ded4c8f36263f82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca2bd8cb2dc21187",
            "owner_id": "168699439230",
            "tags": {
              "Name": "Dev-VPC1"
            },
            "tags_all": {
              "Name": "Dev-VPC1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "Peering-Request",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-07bc38f78d7d5cbd1",
            "peer_owner_id": "168699439230",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0a0382a0bef72e306",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between Oregon and North Virginia"
            },
            "tags_all": {
              "Name": "VPC Peering between Oregon and North Virginia"
            },
            "vpc_id": "vpc-09ded4c8f36263f82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.North_Virginia-VPC",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "Peering-Accepting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-07bc38f78d7d5cbd1",
            "peer_owner_id": "168699439230",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0a0382a0bef72e306",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between Oregon and North Virginia"
            },
            "tags_all": {
              "Name": "VPC Peering between Oregon and North Virginia"
            },
            "vpc_id": "vpc-09ded4c8f36263f82",
            "vpc_peering_connection_id": "pcx-07bc38f78d7d5cbd1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.North_Virginia-VPC",
            "aws_vpc.Oregon-VPC",
            "aws_vpc_peering_connection.Peering-Request"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow-Outbound-Any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:security-group-rule/sgr-0cee352aa341f848b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cee352aa341f848b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b554d186f3dd28c",
            "security_group_rule_id": "sgr-0cee352aa341f848b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Allow-RDP-HTTP",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Allow-Outbound-from-Oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:security-group-rule/sgr-0997d83c2e7a35161",
            "cidr_ipv4": "10.13.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0997d83c2e7a35161",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08d54f0c2ded6724b",
            "security_group_rule_id": "sgr-0997d83c2e7a35161",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Allow-RDP-HTTP-from-Oregon",
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow-Inbound-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:security-group-rule/sgr-0c9493eecfc230fb0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c9493eecfc230fb0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b554d186f3dd28c",
            "security_group_rule_id": "sgr-0c9493eecfc230fb0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Allow-RDP-HTTP",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow-Inbound-HTTP-from-Oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:security-group-rule/sgr-0d935552c627240eb",
            "cidr_ipv4": "10.13.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d935552c627240eb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08d54f0c2ded6724b",
            "security_group_rule_id": "sgr-0d935552c627240eb",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Allow-RDP-HTTP-from-Oregon",
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow-Inbound-RDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:168699439230:security-group-rule/sgr-03ceccd7d9707dc0b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3389,
            "id": "sgr-03ceccd7d9707dc0b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b554d186f3dd28c",
            "security_group_rule_id": "sgr-03ceccd7d9707dc0b",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Allow-RDP-HTTP",
            "aws_vpc.Oregon-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Allow-Inbound-RDP-from-Oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North_Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168699439230:security-group-rule/sgr-0d334eb7747defcc0",
            "cidr_ipv4": "10.13.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3389,
            "id": "sgr-0d334eb7747defcc0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08d54f0c2ded6724b",
            "security_group_rule_id": "sgr-0d334eb7747defcc0",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.Allow-RDP-HTTP-from-Oregon",
            "aws_vpc.North_Virginia-VPC"
          ]
        }
      ]
    }
  ]
}